[tool.poetry]
name = "gooder"
version = "0.3.2"
description = "Simple Google parser"
authors = ["9Slavatar <nslavatar@gmail.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/9Slavatar/gooder"
keywords = ["google", "parser", "search", "link parser", "spider"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.8.0"
urllib3 = "^1.26.9"
cssselect = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true